removed italic from google font

--- a/texts/index.html
+++ b/texts/index.html
@@ -34,7 +34,7 @@
   <link rel="alternate" type="application/rss+xml" href="https://ahtrahddis.github.io/texts/index.xml" title="Яeversed Ƨiddhartha" />
   <style>
  
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
 
   body {
     font-family: IBM Plex Mono, monospace;
