--- a/changelog/index.html
+++ b/changelog/index.html
@@ -47,7 +47,7 @@
 
   <style>
  
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
 
   body {
     font-family: IBM Plex Mono, monospace;
