--- a/info/index.html
+++ b/info/index.html
@@ -55,7 +55,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
 
   <style>
  
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
 
   body {
     font-family: IBM Plex Mono, monospace;
