--- a/pragmatic-dharma/index.html
+++ b/pragmatic-dharma/index.html
@@ -55,7 +55,7 @@
 
   <style>
  
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
 
   body {
     font-family: IBM Plex Mono, monospace;
