--- a/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
@@ -47,7 +47,7 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
 
   <style>
  
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
 
   body {
     font-family: IBM Plex Mono, monospace;
