--- a/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
@@ -43,7 +43,7 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
 
   <style>
  
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
 
   body {
     font-family: IBM Plex Mono, monospace;
