--- a/dharma/index.html
+++ b/dharma/index.html
@@ -59,10 +59,11 @@
 
   <style>
  
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
+
 
   body {
-    font-family: IBM Plex Mono, monospace;
+    font-family: 'Cutive Mono', monospace;
     margin: auto;
     padding: 20px;
     max-width: 720px;
@@ -90,8 +91,8 @@
   }
 
   .title {
-  	font-family: Verdana, sans-serif;
-  	font-size: 18px;
+    font-family: Verdana, sans-serif;
+    font-size: 18px;
     text-decoration: none;
     border: 0;
   }
