--- a/texts/index.html
+++ b/texts/index.html
@@ -34,10 +34,11 @@
   <link rel="alternate" type="application/rss+xml" href="https://ahtrahddis.github.io/texts/index.xml" title="Яeversed Ƨiddhartha" />
   <style>
  
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
+
 
   body {
-    font-family: IBM Plex Mono, monospace;
+    font-family: 'Cutive Mono', monospace;
     margin: auto;
     padding: 20px;
     max-width: 720px;
@@ -65,8 +66,8 @@
   }
 
   .title {
-  	font-family: Verdana, sans-serif;
-  	font-size: 18px;
+    font-family: Verdana, sans-serif;
+    font-size: 18px;
     text-decoration: none;
     border: 0;
   }
