--- a/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
@@ -43,10 +43,11 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
 
   <style>
  
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
+
 
   body {
-    font-family: IBM Plex Mono, monospace;
+    font-family: 'Cutive Mono', monospace;
     margin: auto;
     padding: 20px;
     max-width: 720px;
@@ -74,8 +75,8 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
   }
 
   .title {
-  	font-family: Verdana, sans-serif;
-  	font-size: 18px;
+    font-family: Verdana, sans-serif;
+    font-size: 18px;
     text-decoration: none;
     border: 0;
   }
