--- a/info/index.html
+++ b/info/index.html
@@ -55,11 +55,11 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
 
   <style>
  
-@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
 
 
   body {
-    font-family: 'Cutive Mono', monospace;
+    font-family: 'Inconsolata', monospace;
     margin: auto;
     padding: 20px;
     max-width: 720px;
