--- a/links/index.html
+++ b/links/index.html
@@ -67,11 +67,11 @@
 
   <style>
  
-@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
 
 
   body {
-    font-family: 'Cutive Mono', monospace;
+    font-family: 'Inconsolata', monospace;
     margin: auto;
     padding: 20px;
     max-width: 720px;
