--- a/texts/index.html
+++ b/texts/index.html
@@ -34,11 +34,11 @@
   <link rel="alternate" type="application/rss+xml" href="https://ahtrahddis.github.io/texts/index.xml" title="Яeversed Ƨiddhartha" />
   <style>
  
-@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
 
 
   body {
-    font-family: 'Cutive Mono', monospace;
+    font-family: 'Inconsolata', monospace;
     margin: auto;
     padding: 20px;
     max-width: 720px;
