--- a/changelog/index.html
+++ b/changelog/index.html
@@ -8,14 +8,14 @@
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
 <title>changelog | Яeversed Ƨiddhartha</title>
 <meta name="title" content="changelog" />
-<meta name="description" content="Changelog 2020-10-06  massive revision of website texts  2020-10-05   replaced text font with IBM Plex Mono (commit) - reverted to old (Verdana) font for the website title (commit)
+<meta name="description" content="Changelog 2020-10-06  massive revision of website texts  2020-10-13  replaced text font with Inconsolata (commit)  2020-10-05   replaced text font with IBM Plex Mono (commit) - reverted to old (Verdana) font for the website title (commit)
   added John Vervaeke&rsquo;s &ldquo;Awakening from the Meaning of Crisis&rdquo; link (commit)
   2020-09-30  changed URL from atrahhdis.github.io to ahtrahddis.github.io renamed website to &ldquo;Reversed Siddhartha&rdquo; changed to &ldquo;hugo bear blog&rdquo; theme added &ldquo;A non-mystical explanation of insight meditation and the three characteristics of existence&rdquo;  " />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="changelog" />
-<meta property="og:description" content="Changelog 2020-10-06  massive revision of website texts  2020-10-05   replaced text font with IBM Plex Mono (commit) - reverted to old (Verdana) font for the website title (commit)
+<meta property="og:description" content="Changelog 2020-10-06  massive revision of website texts  2020-10-13  replaced text font with Inconsolata (commit)  2020-10-05   replaced text font with IBM Plex Mono (commit) - reverted to old (Verdana) font for the website title (commit)
   added John Vervaeke&rsquo;s &ldquo;Awakening from the Meaning of Crisis&rdquo; link (commit)
   2020-09-30  changed URL from atrahhdis.github.io to ahtrahddis.github.io renamed website to &ldquo;Reversed Siddhartha&rdquo; changed to &ldquo;hugo bear blog&rdquo; theme added &ldquo;A non-mystical explanation of insight meditation and the three characteristics of existence&rdquo;  " />
 <meta property="og:type" content="article" />
@@ -26,18 +26,18 @@
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="changelog"/>
-<meta name="twitter:description" content="Changelog 2020-10-06  massive revision of website texts  2020-10-05   replaced text font with IBM Plex Mono (commit) - reverted to old (Verdana) font for the website title (commit)
+<meta name="twitter:description" content="Changelog 2020-10-06  massive revision of website texts  2020-10-13  replaced text font with Inconsolata (commit)  2020-10-05   replaced text font with IBM Plex Mono (commit) - reverted to old (Verdana) font for the website title (commit)
   added John Vervaeke&rsquo;s &ldquo;Awakening from the Meaning of Crisis&rdquo; link (commit)
   2020-09-30  changed URL from atrahhdis.github.io to ahtrahddis.github.io renamed website to &ldquo;Reversed Siddhartha&rdquo; changed to &ldquo;hugo bear blog&rdquo; theme added &ldquo;A non-mystical explanation of insight meditation and the three characteristics of existence&rdquo;  "/>
 
 
 
 <meta itemprop="name" content="changelog">
-<meta itemprop="description" content="Changelog 2020-10-06  massive revision of website texts  2020-10-05   replaced text font with IBM Plex Mono (commit) - reverted to old (Verdana) font for the website title (commit)
+<meta itemprop="description" content="Changelog 2020-10-06  massive revision of website texts  2020-10-13  replaced text font with Inconsolata (commit)  2020-10-05   replaced text font with IBM Plex Mono (commit) - reverted to old (Verdana) font for the website title (commit)
   added John Vervaeke&rsquo;s &ldquo;Awakening from the Meaning of Crisis&rdquo; link (commit)
   2020-09-30  changed URL from atrahhdis.github.io to ahtrahddis.github.io renamed website to &ldquo;Reversed Siddhartha&rdquo; changed to &ldquo;hugo bear blog&rdquo; theme added &ldquo;A non-mystical explanation of insight meditation and the three characteristics of existence&rdquo;  ">
 
-<meta itemprop="wordCount" content="69">
+<meta itemprop="wordCount" content="76">
 
 
 
@@ -197,6 +197,10 @@
 <h3 id="2020-10-06">2020-10-06</h3>
 <ul>
 <li>massive revision of website texts</li>
+</ul>
+<h3 id="2020-10-13">2020-10-13</h3>
+<ul>
+<li>replaced text font with Inconsolata <sup><span>(<a href="https://github.com/ahtrahddis/ahtrahddis.github.io/commit/70564a3938af90bebb362d6bdf1ee229902f596cs">commit</a>)</li>
 </ul>
 <h3 id="2020-10-05">2020-10-05</h3>
 <ul>
