changed fonts to lexend deca for text and Roboto condensed for the titles

--- a/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
@@ -43,11 +43,11 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
 
   <style>
  
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
 
   body {
-    font-family: 'Inconsolata', monospace;
+    font-family: 'Lexend Deca', sans-serif;
     margin: auto;
     padding: 20px;
     max-width: 720px;
@@ -68,15 +68,18 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
   strong,
   b {
     color: #222;
+    font-family: 'Roboto Condensed', sans-serif;
   }
+
 
   a {
     color: #3273dc;
   }
 
   .title {
-    font-family: Verdana, sans-serif;
-    font-size: 18px;
+    font-family: 'Roboto Condensed', sans-serif;
+    color: #222;
+    font-size: 20px;
     text-decoration: none;
     border: 0;
   }
