revised title and updated changelog

--- a/dharma/index.html
+++ b/dharma/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
-<title>dharma | Яeversed Ƨiddhartha</title>
+<title>dharma | Reversed Siddhartha</title>
 <meta name="title" content="dharma" />
 <meta name="description" content="Practice Meditation instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
   Mindfulness of Breath (from TMI)
@@ -190,7 +190,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>Яeversed Ƨiddhartha</h2>
+  <h2>Reversed Siddhartha</h2>
 </a>
 <nav><a href="/">Home</a>
 
