--- a/info/index.html
+++ b/info/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
-<title>info | Яeversed Ƨiddhartha</title>
+<title>info | Reversed Siddhartha</title>
 <meta name="title" content="info" />
 <meta name="description" content="Who Am I? I&rsquo;m just a beginner Buddhist g{r}eek.
  Contact If you want to contact me, please send an email to:
@@ -186,7 +186,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
 
 <body>
   <header><a href="/" class="title">
-  <h2>Яeversed Ƨiddhartha</h2>
+  <h2>Reversed Siddhartha</h2>
 </a>
 <nav><a href="/">Home</a>
 
