--- a/links/index.html
+++ b/links/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
-<title>useful links | Яeversed Ƨiddhartha</title>
+<title>useful links | Reversed Siddhartha</title>
 <meta name="title" content="useful links" />
 <meta name="description" content="Useful Links  Teachers   Mahasi Sayadaw
   Sayadaw U Tejaniya
@@ -198,7 +198,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>Яeversed Ƨiddhartha</h2>
+  <h2>Reversed Siddhartha</h2>
 </a>
 <nav><a href="/">Home</a>
 
