--- a/texts/index.html
+++ b/texts/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
-<title>Texts | Яeversed Ƨiddhartha</title>
+<title>Texts | Reversed Siddhartha</title>
 <meta name="title" content="Texts" />
 <meta name="description" content="ahtrahddis - a repository of dharma e-books" />
 <meta name="keywords" content="" />
@@ -31,7 +31,7 @@
 
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
-  <link rel="alternate" type="application/rss+xml" href="https://ahtrahddis.github.io/texts/index.xml" title="Яeversed Ƨiddhartha" />
+  <link rel="alternate" type="application/rss+xml" href="https://ahtrahddis.github.io/texts/index.xml" title="Reversed Siddhartha" />
   <style>
  
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
@@ -165,7 +165,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>Яeversed Ƨiddhartha</h2>
+  <h2>Reversed Siddhartha</h2>
 </a>
 <nav><a href="/">Home</a>
 
