--- a/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
-<title>The Core Features of Pragmatic Dharma | Яeversed Ƨiddhartha</title>
+<title>The Core Features of Pragmatic Dharma | Reversed Siddhartha</title>
 <meta name="title" content="The Core Features of Pragmatic Dharma" />
 <meta name="description" content="This is an article by Vince Horn.
  Introduction Pragmatic Dharma is a contemporary approach to awakening, rooted in tradition. It pulls from the time-tested teachings and practices of the Buddhist tradition, but is simultaneously infused with a contemporary mindset that isn’t afraid to tinker with the traditional formulations.
@@ -178,7 +178,7 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
 
 <body>
   <header><a href="/" class="title">
-  <h2>Яeversed Ƨiddhartha</h2>
+  <h2>Reversed Siddhartha</h2>
 </a>
 <nav><a href="/">Home</a>
 
