--- a/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
-<title>What is Pragmatic Dharma? | Яeversed Ƨiddhartha</title>
+<title>What is Pragmatic Dharma? | Reversed Siddhartha</title>
 <meta name="title" content="What is Pragmatic Dharma?" />
 <meta name="description" content="This is an article by Ron Crouch.
 I’ve been thinking a lot about what “pragmatic dharma” is lately. This is partly because I’m trying to get my own head straight as I write about it, and partly because Jack Kornfield recently criticized it on Buddhist Geeks. Kornfield, in his usual gentle style, was mostly circumspect in his criticism, but he did say that the leaders of the pragmatic dharma movement (I’m assuming he means Kenneth Folk and Daniel Ingram) have redefined key concepts in Buddhism." />
@@ -174,7 +174,7 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
 
 <body>
   <header><a href="/" class="title">
-  <h2>Яeversed Ƨiddhartha</h2>
+  <h2>Reversed Siddhartha</h2>
 </a>
 <nav><a href="/">Home</a>
 
