--- a/pragmatic-dharma/index.html
+++ b/pragmatic-dharma/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
-<title>pragmatic dharma | Яeversed Ƨiddhartha</title>
+<title>pragmatic dharma | Reversed Siddhartha</title>
 <meta name="title" content="pragmatic dharma" />
 <meta name="description" content="What is Pragmatic Dharma?   What is Pragmatic Dharma? by Ron Crouch
   The Core Features of Pragmatic Dharma by Vince Horn
@@ -186,7 +186,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>Яeversed Ƨiddhartha</h2>
+  <h2>Reversed Siddhartha</h2>
 </a>
 <nav><a href="/">Home</a>
 
