--- a/e-book-how-to/index.html
+++ b/e-book-how-to/index.html
@@ -24,11 +24,14 @@
   the epub file is converted to mobi and azw3 with calibre" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/e-book-how-to/" />
+<meta property="og:image" content="https://ahtrahddis.github.io/images/rs.png"/>
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
 
-<meta name="twitter:card" content="summary"/>
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:image" content="https://ahtrahddis.github.io/images/rs.png"/>
+
 <meta name="twitter:title" content="e-book creation how-to"/>
 <meta name="twitter:description" content="E-book Creation For the creation of all these e-books, the following procedure is followed:
   the text is pasted &amp; formatted with / written in / converted to markdown (and very rarely to html)
@@ -46,6 +49,7 @@
   the epub file is converted to mobi and azw3 with calibre">
 
 <meta itemprop="wordCount" content="135">
+<meta itemprop="image" content="https://ahtrahddis.github.io/images/rs.png"/>
 
 
 
