--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
 <meta property="og:description" content="ahtrahddis - a repository of dharma e-books" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://ahtrahddis.github.io/" />
+<meta property="og:image" content="https://ahtrahddis.github.io/images/rs.png"/>
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
 
-<meta name="twitter:card" content="summary"/>
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:image" content="https://ahtrahddis.github.io/images/rs.png"/>
+
 <meta name="twitter:title" content="welcome"/>
 <meta name="twitter:description" content="ahtrahddis - a repository of dharma e-books"/>
 
