--- a/info/index.html
+++ b/info/index.html
@@ -24,11 +24,14 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
  Changelog In order to read about website changes, new content addiditons etc." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/info/" />
+<meta property="og:image" content="https://ahtrahddis.github.io/images/rs.png"/>
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
 
-<meta name="twitter:card" content="summary"/>
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:image" content="https://ahtrahddis.github.io/images/rs.png"/>
+
 <meta name="twitter:title" content="info"/>
 <meta name="twitter:description" content="Who Am I? I&rsquo;m just a beginner Buddhist g{r}eek.
  Contact If you want to contact me, please send an email to:
@@ -46,6 +49,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
  Changelog In order to read about website changes, new content addiditons etc.">
 
 <meta itemprop="wordCount" content="87">
+<meta itemprop="image" content="https://ahtrahddis.github.io/images/rs.png"/>
 
 
 
