--- a/links/index.html
+++ b/links/index.html
@@ -30,11 +30,14 @@
    Youtube   Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/links/" />
+<meta property="og:image" content="https://ahtrahddis.github.io/images/rs.png"/>
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
 
-<meta name="twitter:card" content="summary"/>
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:image" content="https://ahtrahddis.github.io/images/rs.png"/>
+
 <meta name="twitter:title" content="useful links"/>
 <meta name="twitter:description" content="Useful Links  Teachers   Mahasi Sayadaw
   Sayadaw U Tejaniya
@@ -58,6 +61,7 @@
    Youtube   Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)">
 
 <meta itemprop="wordCount" content="85">
+<meta itemprop="image" content="https://ahtrahddis.github.io/images/rs.png"/>
 
 
 
