--- a/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
@@ -20,11 +20,14 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
 Pragmatic Dharma, at its core, is about asking the question: What works? If something doesn’t work, then it’s relinquished. If it works, it’s used." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/" />
+<meta property="og:image" content="https://ahtrahddis.github.io/images/rs.png"/>
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
 
-<meta name="twitter:card" content="summary"/>
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:image" content="https://ahtrahddis.github.io/images/rs.png"/>
+
 <meta name="twitter:title" content="The Core Features of Pragmatic Dharma"/>
 <meta name="twitter:description" content="This is an article by Vince Horn.
  Introduction Pragmatic Dharma is a contemporary approach to awakening, rooted in tradition. It pulls from the time-tested teachings and practices of the Buddhist tradition, but is simultaneously infused with a contemporary mindset that isn’t afraid to tinker with the traditional formulations.
@@ -38,6 +41,7 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
 Pragmatic Dharma, at its core, is about asking the question: What works? If something doesn’t work, then it’s relinquished. If it works, it’s used.">
 
 <meta itemprop="wordCount" content="1723">
+<meta itemprop="image" content="https://ahtrahddis.github.io/images/rs.png"/>
 
 
 
