--- a/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
@@ -18,11 +18,14 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
 I’ve been thinking a lot about what “pragmatic dharma” is lately. This is partly because I’m trying to get my own head straight as I write about it, and partly because Jack Kornfield recently criticized it on Buddhist Geeks. Kornfield, in his usual gentle style, was mostly circumspect in his criticism, but he did say that the leaders of the pragmatic dharma movement (I’m assuming he means Kenneth Folk and Daniel Ingram) have redefined key concepts in Buddhism." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/texts/pragmatic-dharma/what-is-pragmatic-dharma/" />
+<meta property="og:image" content="https://ahtrahddis.github.io/images/rs.png"/>
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
 
-<meta name="twitter:card" content="summary"/>
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:image" content="https://ahtrahddis.github.io/images/rs.png"/>
+
 <meta name="twitter:title" content="What is Pragmatic Dharma?"/>
 <meta name="twitter:description" content="This is an article by Ron Crouch.
 I’ve been thinking a lot about what “pragmatic dharma” is lately. This is partly because I’m trying to get my own head straight as I write about it, and partly because Jack Kornfield recently criticized it on Buddhist Geeks. Kornfield, in his usual gentle style, was mostly circumspect in his criticism, but he did say that the leaders of the pragmatic dharma movement (I’m assuming he means Kenneth Folk and Daniel Ingram) have redefined key concepts in Buddhism."/>
@@ -34,6 +37,7 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
 I’ve been thinking a lot about what “pragmatic dharma” is lately. This is partly because I’m trying to get my own head straight as I write about it, and partly because Jack Kornfield recently criticized it on Buddhist Geeks. Kornfield, in his usual gentle style, was mostly circumspect in his criticism, but he did say that the leaders of the pragmatic dharma movement (I’m assuming he means Kenneth Folk and Daniel Ingram) have redefined key concepts in Buddhism.">
 
 <meta itemprop="wordCount" content="2148">
+<meta itemprop="image" content="https://ahtrahddis.github.io/images/rs.png"/>
 
 
 
