--- a/dharma/index.html
+++ b/dharma/index.html
@@ -26,11 +26,14 @@
   Metta (Loving Kindness) from (this post)" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/dharma/" />
+<meta property="og:image" content="https://ahtrahddis.github.io/images/rs.png"/>
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
 
-<meta name="twitter:card" content="summary"/>
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:image" content="https://ahtrahddis.github.io/images/rs.png"/>
+
 <meta name="twitter:title" content="dharma"/>
 <meta name="twitter:description" content="Practice Meditation instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
   Mindfulness of Breath (from TMI)
@@ -50,6 +53,7 @@
   Metta (Loving Kindness) from (this post)">
 
 <meta itemprop="wordCount" content="430">
+<meta itemprop="image" content="https://ahtrahddis.github.io/images/rs.png"/>
 
 
 
