--- a/pragmatic-dharma/index.html
+++ b/pragmatic-dharma/index.html
@@ -24,11 +24,14 @@
  &hellip;..In fact, Bill (editor&rsquo;s note: Hamilton) was himself an unabashed mushroomer, and not only withheld information but advocated doing so." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/pragmatic-dharma/" />
+<meta property="og:image" content="https://ahtrahddis.github.io/images/rs.png"/>
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
 
-<meta name="twitter:card" content="summary"/>
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:image" content="https://ahtrahddis.github.io/images/rs.png"/>
+
 <meta name="twitter:title" content="pragmatic dharma"/>
 <meta name="twitter:description" content="What is Pragmatic Dharma?   What is Pragmatic Dharma? by Ron Crouch
   The Core Features of Pragmatic Dharma by Vince Horn
@@ -46,6 +49,7 @@
  &hellip;..In fact, Bill (editor&rsquo;s note: Hamilton) was himself an unabashed mushroomer, and not only withheld information but advocated doing so.">
 
 <meta itemprop="wordCount" content="465">
+<meta itemprop="image" content="https://ahtrahddis.github.io/images/rs.png"/>
 
 
 
