changed favicon path

--- a/dharma/index.html
+++ b/dharma/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
 <title>dharma | Reversed Siddhartha</title>
 <meta name="title" content="dharma" />
 <meta name="description" content="Practice Meditation instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
@@ -26,13 +26,13 @@
   Metta (Loving Kindness) from (this post)" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/dharma/" />
-<meta property="og:image" content="https://ahtrahddis.github.io/images/rs.png"/>
+<meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://ahtrahddis.github.io/images/rs.png"/>
+<meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
 
 <meta name="twitter:title" content="dharma"/>
 <meta name="twitter:description" content="Practice Meditation instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
@@ -53,7 +53,7 @@
   Metta (Loving Kindness) from (this post)">
 
 <meta itemprop="wordCount" content="430">
-<meta itemprop="image" content="https://ahtrahddis.github.io/images/rs.png"/>
+<meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 
 
 
