--- a/e-book-how-to/index.html
+++ b/e-book-how-to/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
 <title>e-book creation how-to | Reversed Siddhartha</title>
 <meta name="title" content="e-book creation how-to" />
 <meta name="description" content="E-book Creation For the creation of all these e-books, the following procedure is followed:
@@ -24,13 +24,13 @@
   the epub file is converted to mobi and azw3 with calibre" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/e-book-how-to/" />
-<meta property="og:image" content="https://ahtrahddis.github.io/images/rs.png"/>
+<meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://ahtrahddis.github.io/images/rs.png"/>
+<meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
 
 <meta name="twitter:title" content="e-book creation how-to"/>
 <meta name="twitter:description" content="E-book Creation For the creation of all these e-books, the following procedure is followed:
@@ -49,7 +49,7 @@
   the epub file is converted to mobi and azw3 with calibre">
 
 <meta itemprop="wordCount" content="135">
-<meta itemprop="image" content="https://ahtrahddis.github.io/images/rs.png"/>
+<meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 
 
 
