--- a/changelog/index.html
+++ b/changelog/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
 <title>changelog | Reversed Siddhartha</title>
 <meta name="title" content="changelog" />
 <meta name="description" content="Changelog 2020-10-15  added new google fonts (commit)  2020-10-06  massive revision of website texts  2020-10-05   replaced text font with IBM Plex Mono (commit) - reverted to old (Verdana) font for the website title (commit)
@@ -20,13 +20,13 @@
   2020-09-30  changed URL from atrahhdis.github.io to ahtrahddis.github.io renamed website to &ldquo;Reversed Siddhartha&rdquo; changed to &ldquo;hugo bear blog&rdquo; theme added &ldquo;A non-mystical explanation of insight meditation and the three characteristics of existence&rdquo;  " />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/changelog/" />
-<meta property="og:image" content="https://ahtrahddis.github.io/images/rs.png"/>
+<meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://ahtrahddis.github.io/images/rs.png"/>
+<meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
 
 <meta name="twitter:title" content="changelog"/>
 <meta name="twitter:description" content="Changelog 2020-10-15  added new google fonts (commit)  2020-10-06  massive revision of website texts  2020-10-05   replaced text font with IBM Plex Mono (commit) - reverted to old (Verdana) font for the website title (commit)
@@ -41,7 +41,7 @@
   2020-09-30  changed URL from atrahhdis.github.io to ahtrahddis.github.io renamed website to &ldquo;Reversed Siddhartha&rdquo; changed to &ldquo;hugo bear blog&rdquo; theme added &ldquo;A non-mystical explanation of insight meditation and the three characteristics of existence&rdquo;  ">
 
 <meta itemprop="wordCount" content="75">
-<meta itemprop="image" content="https://ahtrahddis.github.io/images/rs.png"/>
+<meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 
 
 
