--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
 <title>welcome | Reversed Siddhartha</title>
 <meta name="title" content="welcome" />
 <meta name="description" content="ahtrahddis - a repository of dharma e-books" />
@@ -17,13 +17,13 @@
 <meta property="og:description" content="ahtrahddis - a repository of dharma e-books" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://ahtrahddis.github.io/" />
-<meta property="og:image" content="https://ahtrahddis.github.io/images/rs.png"/>
+<meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://ahtrahddis.github.io/images/rs.png"/>
+<meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
 
 <meta name="twitter:title" content="welcome"/>
 <meta name="twitter:description" content="ahtrahddis - a repository of dharma e-books"/>
