--- a/info/index.html
+++ b/info/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
 <title>info | Reversed Siddhartha</title>
 <meta name="title" content="info" />
 <meta name="description" content="Who Am I? I&rsquo;m just a beginner Buddhist g{r}eek.
@@ -24,13 +24,13 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
  Changelog In order to read about website changes, new content addiditons etc." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/info/" />
-<meta property="og:image" content="https://ahtrahddis.github.io/images/rs.png"/>
+<meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://ahtrahddis.github.io/images/rs.png"/>
+<meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
 
 <meta name="twitter:title" content="info"/>
 <meta name="twitter:description" content="Who Am I? I&rsquo;m just a beginner Buddhist g{r}eek.
@@ -49,7 +49,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
  Changelog In order to read about website changes, new content addiditons etc.">
 
 <meta itemprop="wordCount" content="87">
-<meta itemprop="image" content="https://ahtrahddis.github.io/images/rs.png"/>
+<meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 
 
 
