--- a/links/index.html
+++ b/links/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
 <title>useful links | Reversed Siddhartha</title>
 <meta name="title" content="useful links" />
 <meta name="description" content="Useful Links  Teachers   Mahasi Sayadaw
@@ -30,13 +30,13 @@
    Youtube   Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/links/" />
-<meta property="og:image" content="https://ahtrahddis.github.io/images/rs.png"/>
+<meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://ahtrahddis.github.io/images/rs.png"/>
+<meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
 
 <meta name="twitter:title" content="useful links"/>
 <meta name="twitter:description" content="Useful Links  Teachers   Mahasi Sayadaw
@@ -61,7 +61,7 @@
    Youtube   Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)">
 
 <meta itemprop="wordCount" content="85">
-<meta itemprop="image" content="https://ahtrahddis.github.io/images/rs.png"/>
+<meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 
 
 
