--- a/pragmatic-dharma/index.html
+++ b/pragmatic-dharma/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
 <title>pragmatic dharma | Reversed Siddhartha</title>
 <meta name="title" content="pragmatic dharma" />
 <meta name="description" content="What is Pragmatic Dharma?   What is Pragmatic Dharma? by Ron Crouch
@@ -24,13 +24,13 @@
  &hellip;..In fact, Bill (editor&rsquo;s note: Hamilton) was himself an unabashed mushroomer, and not only withheld information but advocated doing so." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/pragmatic-dharma/" />
-<meta property="og:image" content="https://ahtrahddis.github.io/images/rs.png"/>
+<meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://ahtrahddis.github.io/images/rs.png"/>
+<meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
 
 <meta name="twitter:title" content="pragmatic dharma"/>
 <meta name="twitter:description" content="What is Pragmatic Dharma?   What is Pragmatic Dharma? by Ron Crouch
@@ -49,7 +49,7 @@
  &hellip;..In fact, Bill (editor&rsquo;s note: Hamilton) was himself an unabashed mushroomer, and not only withheld information but advocated doing so.">
 
 <meta itemprop="wordCount" content="465">
-<meta itemprop="image" content="https://ahtrahddis.github.io/images/rs.png"/>
+<meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 
 
 
