--- a/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
 <title>The Core Features of Pragmatic Dharma | Reversed Siddhartha</title>
 <meta name="title" content="The Core Features of Pragmatic Dharma" />
 <meta name="description" content="This is an article by Vince Horn.
@@ -20,13 +20,13 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
 Pragmatic Dharma, at its core, is about asking the question: What works? If something doesn’t work, then it’s relinquished. If it works, it’s used." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/" />
-<meta property="og:image" content="https://ahtrahddis.github.io/images/rs.png"/>
+<meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://ahtrahddis.github.io/images/rs.png"/>
+<meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
 
 <meta name="twitter:title" content="The Core Features of Pragmatic Dharma"/>
 <meta name="twitter:description" content="This is an article by Vince Horn.
@@ -41,7 +41,7 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
 Pragmatic Dharma, at its core, is about asking the question: What works? If something doesn’t work, then it’s relinquished. If it works, it’s used.">
 
 <meta itemprop="wordCount" content="1723">
-<meta itemprop="image" content="https://ahtrahddis.github.io/images/rs.png"/>
+<meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 
 
 
