--- a/404.html
+++ b/404.html
@@ -184,7 +184,7 @@
 </header>
   <main>
 <br>
-<center><font color="black"><tt>(Error) The page you requested was sucked into the void (404)</tt></font></center>
+<center><h3><font color="black"><tt>(Error) The page you requested was sucked into the void (404)</tt></font></h3></center>
 <br>
 <div class="video-container">
   <iframe src="https://www.youtube.com/embed/fx2Z5ZD_Rbo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
