updated info page

--- a/info/index.html
+++ b/info/index.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
 <title>info | Reversed Siddhartha</title>
 <meta name="title" content="info" />
-<meta name="description" content="Who Am I? I&rsquo;m just a beginner Buddhist g{r}eek.
+<meta name="description" content="Who Am I? I&rsquo;m a beginner Buddhist g{r}eek and a hobbyist photographer.
  Contact If you want to contact me, please send an email to:
 ns |at| mahasivipassana |dot| com
 If you found a typo or wrong formatting or any other issue on an e-book, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
@@ -17,7 +17,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
 
 
 <meta property="og:title" content="info" />
-<meta property="og:description" content="Who Am I? I&rsquo;m just a beginner Buddhist g{r}eek.
+<meta property="og:description" content="Who Am I? I&rsquo;m a beginner Buddhist g{r}eek and a hobbyist photographer.
  Contact If you want to contact me, please send an email to:
 ns |at| mahasivipassana |dot| com
 If you found a typo or wrong formatting or any other issue on an e-book, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
@@ -33,7 +33,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
 <meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
 
 <meta name="twitter:title" content="info"/>
-<meta name="twitter:description" content="Who Am I? I&rsquo;m just a beginner Buddhist g{r}eek.
+<meta name="twitter:description" content="Who Am I? I&rsquo;m a beginner Buddhist g{r}eek and a hobbyist photographer.
  Contact If you want to contact me, please send an email to:
 ns |at| mahasivipassana |dot| com
 If you found a typo or wrong formatting or any other issue on an e-book, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
@@ -42,13 +42,13 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
 
 
 <meta itemprop="name" content="info">
-<meta itemprop="description" content="Who Am I? I&rsquo;m just a beginner Buddhist g{r}eek.
+<meta itemprop="description" content="Who Am I? I&rsquo;m a beginner Buddhist g{r}eek and a hobbyist photographer.
  Contact If you want to contact me, please send an email to:
 ns |at| mahasivipassana |dot| com
 If you found a typo or wrong formatting or any other issue on an e-book, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
  Changelog In order to read about website changes, new content addiditons etc.">
 
-<meta itemprop="wordCount" content="86">
+<meta itemprop="wordCount" content="88">
 <meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 
 
@@ -209,7 +209,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
 
 <content>
   <h2 id="who-am-i">Who Am I?</h2>
-<p>I&rsquo;m just a beginner Buddhist g{r}eek.</p>
+<p>I&rsquo;m a beginner Buddhist g{r}eek and a <a href="https://vlzetko.com">hobbyist photographer</a>.</p>
 <p> </p>
 <h2 id="contact">Contact</h2>
 <p>If you want to contact me, please send an email to:</p>
@@ -220,7 +220,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
 <p>In order to read about website changes, new content addiditons etc., visit <a href="https://ahtrahddis.github.io/changelog/">this link</a>.</p>
 <p> </p>
 <h2 id="software">Software</h2>
-<p>This website was created with <a href="https://gohugo.io/">hugo</a> and  <a href="https://github.com/janraasch/hugo-bearblog">hugo bear blog</a>.</p>
+<p>This website was created with <a href="https://gohugo.io/">hugo</a> and  <a href="https://github.com/janraasch/hugo-bearblog">hugo bearblog</a>.</p>
 
 </content>
 <p>
