--- a/info/index.html
+++ b/info/index.html
@@ -48,7 +48,7 @@ ns |at| mahasivipassana |dot| com
 If you found a typo or wrong formatting or any other issue on an e-book, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
  Changelog In order to read about website changes, new content addiditons etc.">
 
-<meta itemprop="wordCount" content="88">
+<meta itemprop="wordCount" content="87">
 <meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 
 
@@ -219,8 +219,8 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
 <h2 id="changelog">Changelog</h2>
 <p>In order to read about website changes, new content addiditons etc., visit <a href="https://ahtrahddis.github.io/changelog/">this link</a>.</p>
 <p> </p>
-<h2 id="software">Software</h2>
-<p>This website was created with <a href="https://gohugo.io/">hugo</a> and  <a href="https://github.com/janraasch/hugo-bearblog">hugo bearblog</a>.</p>
+<h2 id="website">Website</h2>
+<p><strong>RS</strong> was built using <a href="https://gohugo.io/">hugo</a> and  <a href="https://github.com/janraasch/hugo-bearblog">hugo bearblog</a>.</p>
 
 </content>
 <p>
