--- a/texts/index.html
+++ b/texts/index.html
@@ -37,11 +37,10 @@
   <link rel="alternate" type="application/rss+xml" href="https://ahtrahddis.github.io/texts/index.xml" title="Reversed Siddhartha" />
   <style>
  
-@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
 
   body {
     font-family: 'Lexend Deca', sans-serif;
+    src: local('Lexend Deca Regular'), url('fonts/LexendDeca-Regular.ttf');
     margin: auto;
     padding: 20px;
     max-width: 720px;
@@ -63,6 +62,7 @@
   b {
     color: #222;
     font-family: 'Roboto Condensed', sans-serif;
+    src: local('Roboto Condensed Bold'), url('fonts/roboto-condensed.bold.ttf');
   }
 
 
@@ -72,6 +72,7 @@
 
   .title {
     font-family: 'Roboto Condensed', sans-serif;
+    src: local('Roboto Condensed Regular'), url('fonts/roboto-condensed.regular.ttf');
     color: #222;
     font-size: 22px;
     text-decoration: none;
