--- a/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
@@ -47,11 +47,10 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
 
   <style>
  
-@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
 
   body {
     font-family: 'Lexend Deca', sans-serif;
+    src: local('Lexend Deca Regular'), url('fonts/LexendDeca-Regular.ttf');
     margin: auto;
     padding: 20px;
     max-width: 720px;
@@ -73,6 +72,7 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
   b {
     color: #222;
     font-family: 'Roboto Condensed', sans-serif;
+    src: local('Roboto Condensed Bold'), url('fonts/roboto-condensed.bold.ttf');
   }
 
 
@@ -82,6 +82,7 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
 
   .title {
     font-family: 'Roboto Condensed', sans-serif;
+    src: local('Roboto Condensed Regular'), url('fonts/roboto-condensed.regular.ttf');
     color: #222;
     font-size: 22px;
     text-decoration: none;
