--- a/info/index.html
+++ b/info/index.html
@@ -60,9 +60,33 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
   <style>
  
 
+@font-face {
+  font-family: 'Lexend Deca';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Lexend Deca'), url('fonts/LexendDeca-Regular.ttf'); 
+}
+
+@font-face {
+  font-family: 'Roboto Condensed Regular';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Roboto Condensed Regular'), url('fonts/LexendDeca-Regular.ttf'); 
+}
+
+@font-face {
+  font-family: 'Roboto Condensed Bold';
+  font-style: bold;
+  font-weight: 700;
+  font-display: swap;
+  src: local('Roboto Condensed Bold'), url('fonts/roboto-condensed.bold.ttf''); 
+}
+
+
   body {
     font-family: 'Lexend Deca', sans-serif;
-    src: local('Lexend Deca Regular'), url('fonts/LexendDeca-Regular.ttf');
     margin: auto;
     padding: 20px;
     max-width: 720px;
@@ -84,7 +108,6 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
   b {
     color: #222;
     font-family: 'Roboto Condensed', sans-serif;
-    src: local('Roboto Condensed Bold'), url('fonts/roboto-condensed.bold.ttf');
   }
 
 
@@ -94,7 +117,6 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
 
   .title {
     font-family: 'Roboto Condensed', sans-serif;
-    src: local('Roboto Condensed Regular'), url('fonts/roboto-condensed.regular.ttf');
     color: #222;
     font-size: 22px;
     text-decoration: none;
