--- a/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
@@ -52,9 +52,33 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
   <style>
  
 
+@font-face {
+  font-family: 'Lexend Deca';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Lexend Deca'), url('fonts/LexendDeca-Regular.ttf'); 
+}
+
+@font-face {
+  font-family: 'Roboto Condensed Regular';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Roboto Condensed Regular'), url('fonts/LexendDeca-Regular.ttf'); 
+}
+
+@font-face {
+  font-family: 'Roboto Condensed Bold';
+  font-style: bold;
+  font-weight: 700;
+  font-display: swap;
+  src: local('Roboto Condensed Bold'), url('fonts/roboto-condensed.bold.ttf''); 
+}
+
+
   body {
     font-family: 'Lexend Deca', sans-serif;
-    src: local('Lexend Deca Regular'), url('fonts/LexendDeca-Regular.ttf');
     margin: auto;
     padding: 20px;
     max-width: 720px;
@@ -76,7 +100,6 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
   b {
     color: #222;
     font-family: 'Roboto Condensed', sans-serif;
-    src: local('Roboto Condensed Bold'), url('fonts/roboto-condensed.bold.ttf');
   }
 
 
@@ -86,7 +109,6 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
 
   .title {
     font-family: 'Roboto Condensed', sans-serif;
-    src: local('Roboto Condensed Regular'), url('fonts/roboto-condensed.regular.ttf');
     color: #222;
     font-size: 22px;
     text-decoration: none;
