--- a/dharma/index.html
+++ b/dharma/index.html
@@ -85,7 +85,7 @@
   font-style: bold;
   font-weight: 700;
   font-display: swap;
-  src: local('Roboto Condensed Bold'), url('fonts/roboto-condensed.bold.ttf''); 
+  src: local('Roboto Condensed Bold'), url('fonts/roboto-condensed.bold.ttf'); 
 }
 
 
