--- a/info/index.html
+++ b/info/index.html
@@ -81,7 +81,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
   font-style: bold;
   font-weight: 700;
   font-display: swap;
-  src: local('Roboto Condensed Bold'), url('fonts/roboto-condensed.bold.ttf''); 
+  src: local('Roboto Condensed Bold'), url('fonts/roboto-condensed.bold.ttf'); 
 }
 
 
