--- a/changelog/index.html
+++ b/changelog/index.html
@@ -73,7 +73,7 @@
   font-style: bold;
   font-weight: 700;
   font-display: swap;
-  src: local('Roboto Condensed Bold'), url('fonts/roboto-condensed.bold.ttf''); 
+  src: local('Roboto Condensed Bold'), url('fonts/roboto-condensed.bold.ttf'); 
 }
 
 
