--- a/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
@@ -73,7 +73,7 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
   font-style: bold;
   font-weight: 700;
   font-display: swap;
-  src: local('Roboto Condensed Bold'), url('fonts/roboto-condensed.bold.ttf''); 
+  src: local('Roboto Condensed Bold'), url('fonts/roboto-condensed.bold.ttf'); 
 }
 
 
