--- a/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
@@ -69,7 +69,7 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
   font-style: bold;
   font-weight: 700;
   font-display: swap;
-  src: local('Roboto Condensed Bold'), url('fonts/roboto-condensed.bold.ttf''); 
+  src: local('Roboto Condensed Bold'), url('fonts/roboto-condensed.bold.ttf'); 
 }
 
 
