updated url CSS color

--- a/info/index.html
+++ b/info/index.html
@@ -100,7 +100,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
   }
 
   a {
-    color: #3273dc;
+    color: #4682B4;
   }
 
   .title {
