--- a/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
@@ -92,7 +92,7 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
   }
 
   a {
-    color: #3273dc;
+    color: #4682B4;
   }
 
   .title {
