--- a/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
@@ -88,7 +88,7 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
   }
 
   a {
-    color: #3273dc;
+    color: #4682B4;
   }
 
   .title {
