--- a/pragmatic-dharma/index.html
+++ b/pragmatic-dharma/index.html
@@ -80,7 +80,7 @@
     padding: 20px;
     max-width: 720px;
     text-align: left;
-    background-color: white;
+    background-color: #F5F5F5;
     word-wrap: break-word;
     overflow-wrap: break-word;
     line-height: 1.5;
