--- a/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
@@ -68,7 +68,7 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
     padding: 20px;
     max-width: 720px;
     text-align: left;
-    background-color: white;
+    background-color: #F5F5F5;
     word-wrap: break-word;
     overflow-wrap: break-word;
     line-height: 1.5;
