--- a/info/index.html
+++ b/info/index.html
@@ -25,7 +25,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/info/" />
 <meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/>
-<meta property="og:site_name" content="Reversed Siddhartha" />
+<meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
 
 
 
@@ -95,7 +95,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
   h6,
   strong,
   b {
-    color: #283040;
+    color: #000000;
     font-family: 'Roboto Condensed Bold', sans-serif;
   }
 
