--- a/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
@@ -21,7 +21,7 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/" />
 <meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/>
-<meta property="og:site_name" content="Reversed Siddhartha" />
+<meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
 
 
 
@@ -87,7 +87,7 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
   h6,
   strong,
   b {
-    color: #283040;
+    color: #000000;
     font-family: 'Roboto Condensed Bold', sans-serif;
   }
 
