--- a/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
@@ -19,7 +19,7 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/texts/pragmatic-dharma/what-is-pragmatic-dharma/" />
 <meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/>
-<meta property="og:site_name" content="Reversed Siddhartha" />
+<meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
 
 
 
@@ -83,7 +83,7 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
   h6,
   strong,
   b {
-    color: #283040;
+    color: #000000;
     font-family: 'Roboto Condensed Bold', sans-serif;
   }
 
