--- a/e-book-how-to/index.html
+++ b/e-book-how-to/index.html
@@ -25,7 +25,7 @@
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/e-book-how-to/" />
 <meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/>
-<meta property="og:site_name" content="Reversed Siddhartha" />
+<meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
 
 
 
@@ -95,7 +95,7 @@
   h6,
   strong,
   b {
-    color: #283040;
+    color: #000000;
     font-family: 'Roboto Condensed Bold', sans-serif;
   }
 
