--- a/texts/index.html
+++ b/texts/index.html
@@ -8,16 +8,16 @@
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
 <title>Texts | Reversed Siddhartha</title>
 <meta name="title" content="Texts" />
-<meta name="description" content="ahtrahddis - a repository of dharma e-books" />
+<meta name="description" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="Texts" />
-<meta property="og:description" content="ahtrahddis - a repository of dharma e-books" />
+<meta property="og:description" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://ahtrahddis.github.io/texts/" />
 <meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/>
-<meta property="og:site_name" content="Reversed Siddhartha" />
+<meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
 
 
 
@@ -25,12 +25,12 @@
 <meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
 
 <meta name="twitter:title" content="Texts"/>
-<meta name="twitter:description" content="ahtrahddis - a repository of dharma e-books"/>
+<meta name="twitter:description" content="Reversed Siddhartha - a repository of dharma e-books and more.."/>
 
 
 
 <meta itemprop="name" content="Texts">
-<meta itemprop="description" content="ahtrahddis - a repository of dharma e-books">
+<meta itemprop="description" content="Reversed Siddhartha - a repository of dharma e-books and more..">
 
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -73,7 +73,7 @@
   h6,
   strong,
   b {
-    color: #283040;
+    color: #000000;
     font-family: 'Roboto Condensed Bold', sans-serif;
   }
 
