added Open Sans font for bold

--- a/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
@@ -85,10 +85,14 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
   h4,
   h5,
   h6,
-  strong,
   b {
     color: #000000;
     font-family: 'Roboto Condensed Bold', sans-serif;
+  }
+
+  strong {
+    font-size: 16px;
+    font-family: 'Open Sans Extra Bold', sans-serif;
   }
 
   a {
