--- a/dharma/index.html
+++ b/dharma/index.html
@@ -97,10 +97,14 @@
   h4,
   h5,
   h6,
-  strong,
   b {
     color: #000000;
     font-family: 'Roboto Condensed Bold', sans-serif;
+  }
+
+  strong {
+    font-size: 16px;
+    font-family: 'Open Sans Extra Bold', sans-serif;
   }
 
   a {
