--- a/info/index.html
+++ b/info/index.html
@@ -93,10 +93,14 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
   h4,
   h5,
   h6,
-  strong,
   b {
     color: #000000;
     font-family: 'Roboto Condensed Bold', sans-serif;
+  }
+
+  strong {
+    font-size: 16px;
+    font-family: 'Open Sans Extra Bold', sans-serif;
   }
 
   a {
