--- a/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
@@ -81,10 +81,14 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
   h4,
   h5,
   h6,
-  strong,
   b {
     color: #000000;
     font-family: 'Roboto Condensed Bold', sans-serif;
+  }
+
+  strong {
+    font-size: 16px;
+    font-family: 'Open Sans Extra Bold', sans-serif;
   }
 
   a {
